--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -68,18 +68,24 @@ h2 {
 /* Styles for table containers */
 .table-container {
     overflow-x: auto; /* Allow horizontal scrolling */
+    overflow: visible;
     display: grid; /* Use grid layout */
     grid-template-columns: 1fr 1fr; /* Two equal columns */
     gap: 2px; /* Add space between tables */
 }
 
+.calculated-data-table{
+     width: auto;
+}
+
 /* Base styles for tables */
 table {
-    width: 100%; /* Set table width to 100% */
+    /* width: 100%;  Set table width to 100% */
     border-collapse: collapse; /* Collapse table borders */
     margin: 5px 0; /* Add vertical margin */
     table-layout: auto; /* Allow table to adjust column widths based on content */
 }
+
 
 /* Styles for table cells */
 th, td {
@@ -100,6 +106,64 @@ th {
 .section-content.hidden {
     display: none; /* Hide content */
 }
+
+.collapsible {
+    background-color: #f1f1f1;
+    color: #444;
+    cursor: pointer;
+    padding: 10px;
+    width: auto;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    margin-bottom: 5px;
+}
+
+.active, .collapsible:hover {
+    background-color: #ccc;
+}
+
+.content {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #f9f9f9;
+}
+
+/* Tooltip container */
+.house-net-worth-field {
+    position: relative;
+    display: inline-block;
+}
+
+/* Tooltip text */
+.tooltip .tooltip-text {
+    visibility: hidden;
+    width: 400px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1000;
+    bottom: 125%; /* Position above the tooltip container */
+    left: 50%;
+    margin-left: -80px;
+    opacity: 0;
+    transition: opacity 0.3s;
+    /* Add optional shadow */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+/* Tooltip text on hover */
+.house-net-worth-field:hover .tooltip .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
+
 
 /* Responsive styles for smaller screens */
 @media (max-width: 800px) {
@@ -138,7 +202,7 @@ th {
         width: 100%; /* Ensure tables do not exceed column width */
         margin: 5px 0; /* Add some margin for table containers */
         page-break-inside: avoid; /* Prevent tables from breaking across pages */
-        overflow: hidden; /* Prevent overflow */
+        overflow: visible; /* Prevent overflow */
     }
 
     table {
